--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
