--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.5.10</version>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <!--版本1.2.0否则无效-->
+            <version>1.2.0</version>
         </dependency>
 
     </dependencies>
